<resources>
    <string name="app_name">CollectMe</string>
    <string name="Title_form_inscription">Title_form_inscription</string>
    <string name="motDePasse_text">mot de passe</string>
    <string name="email_txt">Email</string>
    <string name="btn_inscription_text">S\'inscrire</string>
    <string name="btn_connexion_text">Connexion</string>
    <string name="inscription_reussite">Inscription réussie !</string>
    <string name="inscription_echec">Echec lors de l\'inscription</string>
    <string name="connexion_reussite">Vous êtes connecté !</string>
    <string name="connexion_echec">Echec de connexion :(</string>
    <string name="btn_goBack">"Retour "</string>
    <string name="no_article_text">Pas d\'article</string>
    <string name="lb_date_article">Date :</string>
    <string name="lb_categorie_article">Catégorie :</string>
    <string name="btn_detail_goto">Voir détail</string>
</resources>