<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50px"
            android:layout_marginVertical="30px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleFromInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title_form_inscription" />

            <EditText
                android:id="@+id/et_inscription_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_txt"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/et_inscription_motDePasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/motDePasse_text"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickInscription"
                    android:text="@string/btn_inscription_text" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickGoToConnexion"
                    android:text="@string/btn_connexion_text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>